--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "zsh/zplug"]
 	path = zsh/zplug
 	url = https://github.com/zplug/zplug
+[submodule "meta/dotbot"]
+	path = meta/dotbot
+    url = https://github.com/anishathalye/dotbot
+    ignore = dirty
